# fuzzy-parser

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
crates/fuzzy-parser/: Cargo.toml
crates/fuzzy-parser/examples/: repair_pipeline.rs  schema_import.rs
crates/fuzzy-parser/src/: distance.rs  error.rs  extract.rs  import.rs  lib.rs  repair.rs  sanitize.rs  schema.rs
crates/fuzzy-parser/tests/: pipeline.rs
