[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Fuzzy JSON repair for LLM-generated DSL"
repository = "https://github.com/ynishi/fuzzy-parser"
homepage = "https://github.com/ynishi/fuzzy-parser"
documentation = "https://docs.rs/fuzzy-parser"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strsim = "0.11"
thiserror = "2"
pretty_assertions = "1.4"
