[package]
name = "fuzzy-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["fuzzy", "json", "llm", "parser", "repair"]
categories = ["parsing", "text-processing"]
readme = "../../README.md"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
strsim = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
